sorted out vertical spacing issues and some font size issues for big screens

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
   --main-colour: #2c2827;
   --secondary-colour: #e69215;
+  /* #41b883  #9b59b6  #27ae60  #f39c12  #e74c3c */
 }
 
 * {
@@ -98,21 +99,19 @@ nav img {
   font-size: 75px;
 }
 
-/* #heroContent span,
-#heroContent p:nth-child(4) {
-  color: var(--secondary-colour);
-} */
-
 .accent {
   color: var(--secondary-colour);
   font-weight: bold;
 }
 
 .mainContent {
-  height: 100vh;
+  height: 110vh;
   width: 100%;
   max-width: 1500px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .hurdlesContainer {
@@ -121,24 +120,30 @@ nav img {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: auto;
+  gap: 2rem;
+}
+
+.solutions {
+  width: 40%;
 }
 
 .hurdles {
-  width: 60%;
-  height: 90%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: space-evenly;
   justify-content: space-evenly;
+  gap: 2rem;
 }
 
 .row {
-  height: 50%;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  gap: 1rem;
 }
 
 .hurdle {
@@ -149,6 +154,7 @@ nav img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 1vw;
 }
 
 .hurdle p {
@@ -192,37 +198,37 @@ nav img {
 }
 
 .sellContainer {
-  width: 90%;
+  width: 70%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: auto;
 }
 
-.sellContainer div:nth-child(2) {
-  width: 40%;
+.sellContainer div:nth-child(1) {
+  width: 30%;
 }
 
-.sellContainer div:nth-child(2) img {
-  width: 70%;
+.sellContainer div:nth-child(1) img {
+  width: 100%;
   max-width: 700px;
   border-radius: 20px;
   object-fit: contain;
 }
 
-.sellContainer div:nth-child(1) {
-  width: 60%;
+.sellContainer div:nth-child(2) {
+  width: 70%;
   text-align: center;
 }
 
-.sellContainer div:nth-child(1) h2 {
+.sellContainer div:nth-child(2) h2 {
   font-size: 25px;
 }
 
-.sellContainer div:nth-child(1) p {
+.sellContainer div:nth-child(2) p {
   font-size: 15px;
 }
-.sellContainer div:nth-child(1) button {
+.sellContainer div:nth-child(2) button {
   margin-top: 15px;
   padding: 10px 25px;
   font-weight: bold;
@@ -234,6 +240,7 @@ nav img {
 
 #aboutUs {
   margin-top: 200px;
+  height: 150vh;
 }
 #aboutUs > div {
   width: 70%;
@@ -243,45 +250,47 @@ nav img {
   align-items: center;
   justify-content: space-between;
   text-align: center;
+  margin-bottom: 100px;
 }
 
 #aboutUs > div .image {
-  width: 40%;
+  width: 50%;
 }
 
 #aboutUs > div .content {
-  width: 59%;
+  width: 50%;
 }
 
 #aboutUs > div .image img {
-  width: 85%;
-  max-width: 500px;
+  width: 90%;
+  max-width: 430px;
   border-radius: 20px;
   border: 5px solid var(--secondary-colour);
   filter: brightness(0.8);
   margin: auto;
+  object-fit: contain;
 }
 
 #aboutUs h1 {
-  font-size: 30px;
+  font-size: 2vw;
 }
 
 #aboutUs h2 {
-  font-size: 25px;
+  font-size: 1.5vw;
 }
 
 #aboutUs h3 {
-  font-size: 20px;
+  font-size: 1.2vw;
 }
 
 #aboutUs p {
-  font-size: 15px;
+  font-size: 1vw;
 }
 
 #aboutUs .footer {
   display: flex;
   justify-content: flex-start;
-  gap: 1rem;
+  gap: 3rem;
 }
 
 #aboutUs .footer img {
@@ -297,11 +306,20 @@ nav img {
 
 #infoSection {
   width: 90%;
+  height: 90vh;
   margin: auto;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+}
+
+#infoSection h1 {
+  font-size: 2vw;
+}
+
+#infoSection span {
+  font-size: 0.85vw;
 }
 
 #infoSection .content {
@@ -314,7 +332,7 @@ nav img {
 #infoSection .image {
   position: relative;
   display: inline-block;
-  width: 30%;
+  width: 15%;
 }
 
 #infoSection .image img {
@@ -328,7 +346,7 @@ nav img {
   background-color: var(--secondary-colour);
   color: var(--main-colour);
   text-align: center;
-  font-size: 30px;
+  font-size: 1.2vw;
 }
 
 #infoSection button {
@@ -351,23 +369,26 @@ nav img {
 }
 
 #contactUsForm .image {
-  width: 30%;
+  width: 45%;
   position: relative;
 }
 
 #contactUsForm .image img {
   width: 100%;
   object-fit: contain;
+  border-radius: 20px;
+  /* border: solid 2px var(--secondary-colour); */
 }
 
 #contactUsForm .image p {
   background-color: var(--secondary-colour);
   color: var(--main-colour);
-  padding: 5px;
+  padding: 10px;
   text-align: center;
   position: absolute;
   top: 50%;
   font-weight: bold;
+  width: calc(100% - 20px);
 }
 
 #contactUsForm .form {
@@ -411,4 +432,8 @@ nav img {
 #contactUsForm textarea {
   border: solid 2px var(--secondary-colour);
   padding: 7px;
+}
+
+#contactUsForm h1 {
+  font-size: 3vw;
 }
